# sm-logic

./: .gitignore  Cargo.toml  README.md  build.rs
sm-logic-usage/: Cargo.toml
sm-logic-usage/src/: main.rs
src/: bind.rs  bp_manager.rs  combiner.rs  connection.rs  lib.rs  positioner.rs  scheme.rs  shape.rs  slot.rs  tests.rs
src/presets/: convertors.rs  display.rs  math.rs  memory.rs  mod.rs
src/shape/: mod.rs
src/shape/vanilla/: block.rs  character_shape.rs  gate.rs  mod.rs  timer.rs  totebot_capsule.rs
src/util/: map3d.rs  mat3.rs  mod.rs  palette.rs  rot.rs  vec3.rs
src/util/mat/: mod.rs  traits.rs
